# Logistics-data-platform

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
config/: base.yaml  dev.yaml  pii_config.yaml  prod.yaml
config/event_schemas/: delivery.completed.json  shipment.created.json
docker/: Dockerfile.api  Dockerfile.dataflow  entrypoint-dataflow.sh
schemas/clean/: shipment_events.json
schemas/curated/: dim_facility.json  fact_deliveries.json
scripts/: deploy_dataflow.sh  run_tests.sh  sync_dags.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routers/: facilities.py  metrics.py  shipments.py
src/api/services/: bigquery_service.py
src/batch/: __init__.py
src/batch/dags/: marts_daily.py  reconciliation.py  sla_monitoring.py
src/common/: __init__.py  config_loader.py  logging_utils.py  metrics.py  schemas.py
src/models/: __init__.py
src/models/dimensions/: __init__.py
src/models/events/: __init__.py  base.py  delivery.py  driver.py  facility.py  shipment.py
src/streaming/: __init__.py  pipeline.py
src/streaming/sinks/: __init__.py  bq_sink.py  gcs_sink.py
src/streaming/sources/: __init__.py  kafka_source.py  pubsub_source.py
src/streaming/transforms/: __init__.py  dedupe.py  enrich.py  normalize.py  pii.py  route.py  validate.py
src/streaming/windows/: __init__.py  tumbling.py
terraform/envs/dev/: main.tf
terraform/envs/prod/: main.tf
terraform/modules/bigquery/: main.tf
terraform/modules/cloud-run/: main.tf
terraform/modules/composer/: main.tf
terraform/modules/dataflow/: main.tf
terraform/modules/gcs/: main.tf
terraform/modules/iam/: main.tf
terraform/modules/kafka/: main.tf
terraform/modules/monitoring/: main.tf
terraform/modules/networking/: main.tf
terraform/modules/pubsub/: main.tf
terraform/modules/secret-manager/: main.tf
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_schema_evolution.py
tests/unit/api/: __init__.py  test_api.py
tests/unit/dags/: __init__.py  test_dag_import.py
tests/unit/transforms/: __init__.py  test_dedupe.py  test_normalize.py  test_pii.py  test_validate.py
